--- a/shop.html
+++ b/shop.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Ambulance Shop Order Formm</title>
+  <title>Ambulance Shop Order Form</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 24px; }
     h2 { margin-top: 32px; }
